--- a/package.json
+++ b/package.json
@@ -7,35 +7,17 @@
   "license": "MIT",
   "dependencies": {
     "bn.js": "^5.2.0",
-    "body-parser": "^1.19.1",
-    "carbites": "^1.0.6",
     "chalk": "^4.1.0",
-    "cids": "^1.1.6",
     "commander": "^7.1.0",
-    "compression": "^1.7.4",
     "concurrently": "^6.0.0",
-    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
-    "express": "^4.17.2",
-    "getconfig": "^4.5.0",
-    "go-ipfs": "^0.11.0",
-    "helmet": "^5.0.1",
-    "http-status": "^1.5.0",
     "inquirer": "^8.0.0",
-    "ipfs-car": "^0.6.1",
-    "ipfs-http-client": "^49.0.4",
     "it-all": "^1.0.5",
     "json-colorizer": "^2.2.2",
     "lodash": "^4.17.21",
-    "method-override": "^3.0.0",
     "moment": "^2.29.1",
-    "morgan": "^1.10.0",
     "multiaddr": "^8.1.2",
-    "nocache": "^3.0.1",
-    "nodemon": "^2.0.15",
-    "web3": "^1.6.1",
-    "winston": "^3.4.0",
-    "winston-daily-rotate-file": "^4.5.5"
+    "web3": "^1.6.1"
   },
   "devDependencies": {
     "@chainsafe/truffle-plugin-abigen": "^0.0.2",
