--- a/.env.example
+++ b/.env.example
@@ -14,9 +14,13 @@ PINNING_SERVICE_KEY=
 # You can leave these values alone to use Pinata as your pinning service.
 PINNING_SERVICE_NAME=
 PINNING_SERVICE_ENDPOINT=
+PINATA_API_KEY=
+PINATA_API_SECRET=
 UPLOAD_SERVICE_URL=
 
 PORT=
 API_HEADER=
 API_KEY=
 NODE_ENV=
+METADATA_PATH=
+REVEAL_SCRIPT_PATH=
