--- a/package.json
+++ b/package.json
@@ -7,29 +7,23 @@
   "license": "MIT",
   "dependencies": {
     "bn.js": "^5.2.0",
-    "chalk": "^4.1.0",
     "commander": "^7.1.0",
-    "concurrently": "^6.0.0",
     "cross-env": "^7.0.3",
-    "inquirer": "^8.0.0",
-    "it-all": "^1.0.5",
-    "json-colorizer": "^2.2.2",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
-    "multiaddr": "^8.1.2",
     "web3": "^1.6.1"
   },
   "devDependencies": {
     "@chainsafe/truffle-plugin-abigen": "^0.0.2",
-    "@openzeppelin/contracts": "^4.4.1",
+    "truffle": "^5.4.22",
+    "@openzeppelin/contracts": "4.4.0",
     "@typechain/web3-v1": "^4.0.0",
     "@types/jest": "^27.0.3",
-    "@types/node": "^17.0.2",
+    "@types/node": "^16.11.11",
     "@types/web3": "^1.2.2",
+    "jest": "^27.4.3",
     "ganache-cli": "^6.12.2",
-    "jest": "^27.4.5",
-    "truffle": "^5.4.22",
-    "ts-jest": "^27.1.2",
+    "ts-jest": "^27.0.7",
     "ts-node": "^10.4.0",
     "typechain": "^6.0.5",
     "typescript": "^4.5.2"
