--- a/package.json
+++ b/package.json
@@ -15,14 +15,16 @@
   },
   "devDependencies": {
     "@chainsafe/truffle-plugin-abigen": "^0.0.2",
-    "truffle": "^5.4.22",
     "@openzeppelin/contracts": "4.4.0",
     "@typechain/web3-v1": "^4.0.0",
     "@types/jest": "^27.0.3",
     "@types/node": "^16.11.11",
     "@types/web3": "^1.2.2",
-    "jest": "^27.4.3",
     "ganache-cli": "^6.12.2",
+    "jest": "^27.4.3",
+    "truffle": "^5.4.22",
+    "truffle-flattener": "^1.5.0",
+    "truffle-plugin-verify": "^0.5.21",
     "ts-jest": "^27.0.7",
     "ts-node": "^10.4.0",
     "typechain": "^6.0.5",
