--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bn.js": "^5.2.0",
     "commander": "^7.1.0",
     "cross-env": "^7.0.3",
+    "dotenv": "^16.0.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "web3": "^1.6.1"
@@ -16,6 +17,7 @@
   "devDependencies": {
     "@chainsafe/truffle-plugin-abigen": "^0.0.2",
     "@openzeppelin/contracts": "4.4.0",
+    "@truffle/hdwallet-provider": "^2.0.3",
     "@typechain/web3-v1": "^4.0.0",
     "@types/jest": "^27.0.3",
     "@types/node": "^16.11.11",
@@ -24,6 +26,7 @@
     "jest": "^27.4.3",
     "truffle": "^5.4.22",
     "truffle-flattener": "^1.5.0",
+    "truffle-hdwallet-provider": "^1.0.17",
     "truffle-plugin-verify": "^0.5.21",
     "ts-jest": "^27.0.7",
     "ts-node": "^10.4.0",
